--- a/index.html
+++ b/index.html
@@ -41,42 +41,42 @@
                 <h2>Ведьмак 3: Дикая Охота</h2>
                 <p>Жанр: Ролевая игра</p>
                 <p>Рейтинг: 9.1/10</p>
-                <img src="/lab3/images/witcher.jpg" alt="The Witcher 3">
+                <img src="images/witcher.jpg" alt="The Witcher 3">
             </article>
             
             <article class="game">
                 <h2>DOOM Eternal</h2>
                 <p>Жанр: Экшен</p>
                 <p>Рейтинг: 8.6/10</p>
-                <img src="/lab3/images/doom.jpg" alt="DOOM Eternal">
+                <img src="images/doom.jpg" alt="DOOM Eternal">
             </article>
 
             <article class="game">
                 <h2>DOTA 2</h2>
                 <p>Жанр: MOBA</p>
                 <p>Рейтинг: 9.0/10</p>
-                <img src="/lab3/images/dota2.jpg" alt="dota2">
+                <img src="images/dota2.jpg" alt="dota2">
             </article>
 
             <article class="game">
                 <h2>CS 2</h2>
                 <p>Жанр: Шутер от первого лица</p>
                 <p>Рейтинг: 10/10</p>
-                <img src="/lab3/images/cs2.jpg" alt="cs2">
+                <img src="images/cs2.jpg" alt="cs2">
             </article>
 
             <article class="game">
                 <h2> CoD Warzon</h2>
                 <p>Жанр: Королевская битва</p>
                 <p>Рейтинг: 10/10</p>
-                <img src="/lab3/images/wz.jpg" alt="wz">
+                <img src="images/wz.jpg" alt="wz">
             </article>
             
             <article class="game">
                 <h2>PUBG</h2>
                 <p>Жанр: Королевская битва</p>
                 <p>Рейтинг: 8.1/10</p>
-                <img src="/lab3/images/pubg.jpg" alt="DOOM Eternal">
+                <img src="images/pubg.jpg" alt="DOOM Eternal">
             </article>
         </div>
     </section>
