--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Games</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="/lab3/auth.html">Login</a></li>
+                <li><a href="auth.html">Login</a></li>
             </ul>
         </nav>
     </header>
